# xucg

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README.md  configure.m4
api/: ucg.h  ucg_def.h  ucg_mpi.h  ucg_plan_component.h
base/: ucg_group.c  ucg_group.h  ucg_plan.c  ucg_plan.h
builtin/: Makefile.am  builtin.c
builtin/ops/: builtin_cb.inl  builtin_ops.c  builtin_ops.h
builtin/plan/: builtin_algo_check.c  builtin_algo_decision.c  builtin_algo_decision.h  builtin_algo_mgr.c  builtin_algo_mgr.h  builtin_algo_select.c  builtin_binary_block.c  builtin_binomial_tree.c  builtin_plan.h  builtin_plan_cache.c  builtin_plan_cache.h  builtin_recursive.c  builtin_ring.c  builtin_topo.c  builtin_topo.h  builtin_topo_aware.c  builtin_topo_info.c  builtin_trees.c
cmake/: test_component_dep.cmake  test_planc_dep.cmake
docs/: Doxyfile
src/: CMakeLists.txt
src/core/: CMakeLists.txt  ucg_base.c  ucg_base.h  ucg_context.c  ucg_context.h  ucg_def.h  ucg_dt.c  ucg_dt.h  ucg_global.c  ucg_global.h  ucg_group.c  ucg_group.h  ucg_plan.c  ucg_plan.h  ucg_rank_map.c  ucg_rank_map.h  ucg_request.c  ucg_request.h  ucg_topo.c  ucg_topo.h  ucg_version.c  ucg_vgroup.h
src/planc/: CMakeLists.txt  ucg_planc.c  ucg_planc.h  ucg_planc_def.h  ucg_planm.c  ucg_planm.h
src/planc/hccl/: CMakeLists.txt  planc_hccl_base.c  planc_hccl_base.h  planc_hccl_context.c  planc_hccl_context.h  planc_hccl_dt.c  planc_hccl_dt.h  planc_hccl_global.c  planc_hccl_global.h  planc_hccl_group.c  planc_hccl_group.h  planc_hccl_helper.h  planc_hccl_plan.c  planc_hccl_plan.h
src/planc/hccl/allgatherv/: allgatherv.c  allgatherv.h  allgatherv_ring.c  allgatherv_ring_hpl.c
src/planc/hccl/allreduce/: allreduce.c  allreduce.h  allreduce_native.c
src/planc/hccl/barrier/: barrier.c  barrier.h  barrier_native.c
src/planc/hccl/bcast/: bcast.c  bcast.h  bcast_native.c  bcast_ring_modified.c
src/planc/hccl/gatherv/: gatherv.c  gatherv.h  gatherv_kntree.c  gatherv_linear.c
src/planc/hccl/scatterv/: scatterv.c  scatterv.h  scatterv_kntree.c  scatterv_linear.c
src/planc/ucx/: CMakeLists.txt  planc_ucx_base.c  planc_ucx_base.h  planc_ucx_context.c  planc_ucx_context.h  planc_ucx_def.h  planc_ucx_global.c  planc_ucx_global.h  planc_ucx_group.c  planc_ucx_group.h  planc_ucx_meta.c  planc_ucx_meta.h  planc_ucx_p2p.c  planc_ucx_p2p.h  planc_ucx_plan.c  planc_ucx_plan.h
src/planc/ucx/allgatherv/: allgatherv.c  allgatherv.h  allgatherv_neighbor.c  allgatherv_ring.c  allgatherv_ring_hpl.c
src/planc/ucx/allreduce/: allreduce.c  allreduce.h  allreduce_meta.c  allreduce_meta.h  allreduce_na_inc.c  allreduce_na_kntree.c  allreduce_na_rabenseifner.c  allreduce_na_rd_and_bntree.c  allreduce_na_rd_and_kntree.c  allreduce_nta_kntree.c  allreduce_rabenseifner.c  allreduce_rd.c  allreduce_ring.c  allreduce_sa_inc.c  allreduce_sa_kntree.c  allreduce_sa_rabenseifner.c  allreduce_sa_rd_and_bntree.c  allreduce_sa_rd_and_kntree.c
src/planc/ucx/barrier/: barrier.c  barrier.h  barrier_meta.c  barrier_meta.h  barrier_na_inc.c  barrier_na_kntree.c  barrier_na_rd_and_bntree.c  barrier_na_rd_and_kntree.c  barrier_rd.c  barrier_sa_inc.c  barrier_sa_kntree.c  barrier_sa_rd_and_bntree.c  barrier_sa_rd_and_kntree.c
src/planc/ucx/bcast/: bcast.c  bcast.h  bcast_bntree.c  bcast_inc.c  bcast_kntree.c  bcast_meta.c  bcast_na_bntree.c  bcast_na_kntree.c  bcast_na_kntree_and_bntree.c  bcast_nta_kntree.c  bcast_ring.c  bcast_van_de_geijn.c
src/planc/ucx/gatherv/: gatherv.c  gatherv.h  gatherv_linear.c
src/planc/ucx/reduce/: reduce.c  reduce.h  reduce_kntree.c
src/planc/ucx/scatterv/: scatterv.c  scatterv.h  scatterv_kntree.c  scatterv_linear.c
src/ucg/api/: ucg.h  ucg_version.h.in
src/util/: CMakeLists.txt  ucg_array.h  ucg_atomic.h  ucg_class.h  ucg_component.c  ucg_component.h  ucg_cpu.h.in  ucg_hash.h  ucg_helper.h  ucg_hepler.h  ucg_list.h  ucg_lock.h  ucg_log.c  ucg_log.h  ucg_malloc.c  ucg_malloc.h  ucg_math.h  ucg_mpool.c  ucg_mpool.h  ucg_parser.h  ucg_profile.h  ucg_progile.h  ucg_time.h
src/util/algo/: ucg_kntree.c  ucg_kntree.h  ucg_rd.c  ucg_rd.h  ucg_rh.c  ucg_rh.h  ucg_ring.c  ucg_ring.h
tests/: CMakeLists.txt
tests/gtest/: CMakeLists.txt  stub.cpp  stub.h
tests/gtest/core/: test_context.cpp  test_dt.cpp  test_global.cpp  test_group.cpp  test_plan.cpp  test_plan.h  test_rank_map.cpp  test_request.cpp  test_topo.cpp
tests/gtest/planc/: test_planc.cpp
tests/gtest/planc/hccl/: test_hccl_base.cpp  test_hccl_context.cpp  test_hccl_group.cpp
tests/gtest/planc/ucx/: test_ucx_group.cpp  text_ucx_context.cpp
tests/gtest/util/: test_algo.cpp  test_algo.h  test_component.cpp
tests/mpi/: CMakeLists.txt  main.c
tools/: CMakeLists.txt
tools/info/: CMakeLists.txt  plan_info.c  type_info.c  ucg_info.c  ucg_info.h
tools/perf/: CMakeLists.txt  ucg_perf.c
